<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kazu.garbageday.ui.home.HomeFragment"
        android:label="@string/title_collection_day"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.kazu.garbageday.ui.garbageList.GarbageListFragment"
        android:label="@string/title_garbage_list"
        tools:layout="@layout/fragment_garbage_list" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kazu.garbageday.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_garbageDetail"
        android:name="com.kazu.garbageday.ui.garbageDetail.GarbageDetailFragment"
        android:label="ゴミ詳細"
        tools:layout="@layout/fragment_garbage_detail" />
</navigation>