<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--月曜日-->
        <LinearLayout
            android:id="@+id/mondayArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/mondayTextArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mondayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monday"
                    android:textAlignment="center"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/mondayTagArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <include layout="@layout/no_garbage_tag" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <!--火曜日-->
        <LinearLayout
            android:id="@+id/tuesdayArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mondayArea">

            <LinearLayout
                android:id="@+id/tuesdayTextArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tuesdayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday"
                    android:textAlignment="center"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/tuesdayTagArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <include layout="@layout/burning_garbage_tag" />

                <include layout="@layout/plastic_trash_tag" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <!--水曜日-->
        <LinearLayout
            android:id="@+id/wednesdayArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tuesdayArea">

            <LinearLayout
                android:id="@+id/wednesdayTextArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wednesdayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday"
                    android:textAlignment="center"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/wednesdayTagArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <include layout="@layout/burning_garbage_tag" />

                <include layout="@layout/plastic_trash_tag" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <!--木曜日-->
        <LinearLayout
            android:id="@+id/thursdayArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wednesdayArea">

            <LinearLayout
                android:id="@+id/thursdayTextArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/thursdayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"
                    android:textAlignment="center"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/thursdayTagArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <include layout="@layout/burning_garbage_tag" />

                <include layout="@layout/plastic_trash_tag" />

                <include layout="@layout/no_burning_garbage_tag" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <!--金曜日-->
        <LinearLayout
            android:id="@+id/fridayArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thursdayArea">

            <LinearLayout
                android:id="@+id/fridayTextArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fridayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"
                    android:textAlignment="center"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fridayTagArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <include layout="@layout/bottles_tag" />

                <include layout="@layout/small_metal_tag" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <!--土曜日-->
        <LinearLayout
            android:id="@+id/saturdayArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fridayArea">

            <LinearLayout
                android:id="@+id/saturdayTextArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/saturdayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"
                    android:textAlignment="center"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/saturdayTagArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <include layout="@layout/resource_recovery_tag" />

                <include layout="@layout/plastic_trash_tag" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

        <!--日曜日-->
        <LinearLayout
            android:id="@+id/sundayArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:background="@drawable/border"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_5"
            android:showDividers="middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saturdayArea">

            <LinearLayout
                android:id="@+id/sundayTextArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sundayText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:textAlignment="center"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/sundayTagArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexWrap="wrap"
                app:justifyContent="flex_start">

                <include layout="@layout/burning_garbage_tag" />

                <include layout="@layout/plastic_trash_tag" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

